--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,5 +5,12 @@
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
+    <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
+        <item name="colorPrimaryDark">@color/status_bar_color</item>
+        <!-- <item name="android:windowTranslucentNavigation">false</item> -->
+        <!-- <item name="android:windowNoTitle">true</item> -->
+        <!-- <item name="android:windowActionBar">true</item> -->
+        <item name="android:windowFullscreen">true</item>
+    </style>
 
 </resources>
